--- a/Ejercicio3/TablaPaises.html
+++ b/Ejercicio3/TablaPaises.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Un zumo de naranja</title>
+        <title>Listado de países</title>
     </head>
     <body>
         <font color="blue" size="1">
